# Training

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  ReadMe.txt
Training/: CMakeLists.txt
Training/Include/: DynamicArray.h  Main.h  Person.h  amphibian.h  animal.h  aquatic_animal.h  basic_concepts.h  cpp20.h  inheritance.h  land_animal.h
Training/Include/Templates/: DynamicArray.h  MyVector.h  Stack.h  templates.h
Training/Source/: Globals.cpp  Main.cpp  Person.cpp  amphibian.cpp  animal.cpp  aquatic_animal.cpp  basic_concepts.cpp  cpp20.cpp  inheritance.cpp  land_animal.cpp  templates.cpp
Training/gRPC/: service.grpc.pb.h
grpcClient/: CMakeLists.txt
grpcClient/Source/: Main.cpp
grpcClient/gRPC/: service.grpc.pb.cc  service.grpc.pb.h
grpcClient/proto/: service.pb.cc  service.pb.h  service.proto
